<resources>
    <string name="app_name">寶貝專屬記帳</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="target_Lists">目標列表</string>
    <string name="target_Create">新增目標</string>
    <string name="target_Finish">完成列表</string>
    <string name="Target_name" >目標名稱</string>
    <string name="Target_detail" >信心喊話</string>
    <string name="Target_money" >目標達成金額</string>
    <string name="Money" >$</string>
    <string name="Target_color" >選擇目標顏色</string>
    <string name="HideTarget_name">點此輸入，8字以內</string>
    <string name="HideTarget_detail">點此輸入，20字以內</string>
    <string name="HideTarget_money">點此輸入</string>
    <string name="Choice_UpateTitle">設定</string>
    <string name="Choice_UpdateDetail">請選擇編輯或刪除</string>
    <string name="Update">編輯</string>
    <string name="Remove">刪除</string>
    <string name="Cancel">取消</string>
    <string name="targetUpdate">目標編輯</string>
    <string name="OK">確定</string>
    <string name="SaveSuccess">儲存成功</string>
    <string name="isTitleEmpty">標題不能空白</string>
    <string name="isMoneyEmpty">請輸入金額</string>
    <string name="isDetailEmpty">喊話一下嘛</string>
    <string name="Payout">支出</string>
    <string name="Income">收入</string>
    <string name="ChangeDate">更改日期</string>
    <string name="TodayBudget">今日預算剩餘：</string>
    <string name="SurplusMoney">帳戶剩餘金額：</string>
    <string name="HideRdMoney_EnterHere">點此輸入</string>
    <string name="Note">備註：</string>
    <string name="PlzSelectItem">請點選一個項目</string>
    <string name="PayoutTotal">支出總合：</string>
    <string name="IncomeTotal">收入總合：</string>
    <string name="DateBetween">~</string>
    <string name="MoneySetting">金額設定</string>
    <string name="BudgetSetting">預算設定</string>
    <string name="PasswordSetting">密碼設定</string>
    <string name="CustomItem">自訂項目</string>
    <string name="AboutUs">設計團隊</string>
    <string name="GiveMeStar">評論五星</string>
    <string name="Share">分享</string>
    <string name="SupportUs">支持我們</string>
    <string name="MoneySettingTitle">金額</string>
    <string name="CustomItemTitle">自訂</string>
    <string name="AboutUsTitle">關於</string>
    <string name="Deerlight">Deerlight 曝鹿官方網站</string>
    <string name="Thanks">感謝您的支持</string>
    <string name="ShareAPP">分享此應用程式</string>
    <string name="ClickAdmob">點擊廣告</string>
    <string name="CurrentMoney">目前帳戶剩餘金額</string>
    <string name="HideSetting_EnterHere">點此輸入您的剩餘金額</string>

</resources>
