<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="black.target.deerlight.com.targetmoney.Activitys.MoneySettingActivity">

    <RelativeLayout
        android:id="@+id/Show_CurrentMoney_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CurrentMoney"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20000元"
            android:layout_toRightOf="@id/textView8"
            android:gravity="end"
            android:layout_alignParentRight="true"
            android:id="@+id/CurrentMoney_textView" />
    </RelativeLayout>

    <View
        android:id="@+id/I_am_a_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/Show_CurrentMoney_RelativeLayout"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/Input_CurrentMoney_RelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/I_am_a_line"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/Money_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Money"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:id="@+id/Setting_CurrentMoney_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Money_sign"
            android:inputType="number"
            android:gravity="end"
            android:hint="@string/HideSetting_EnterHere"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Input_CurrentMoney_RelativeLayout">

        <Button
            android:id="@+id/Setting_CurrentMoney_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/settingsActionBarColor"
            android:textColor="@color/White"
            android:text="@string/OK"/>

    </RelativeLayout>

</RelativeLayout>
