<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TransparentColor">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/recordMoneyColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_above="@+id/LinearLayout_buttons">

            <RelativeLayout
                android:id="@+id/RelativeLayout_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/White"
                    android:text="@string/Note" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/Note_EditText"
                    android:textColor="@color/White"
                    android:layout_toRightOf="@+id/textView1"/>
            </RelativeLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_listview"
                android:divider="@color/White"
                android:dividerHeight="0.3dp"
                android:listSelector="@color/recordMoneyPressColor"
                android:background="@color/recordMoneyColor"
                android:layout_below="@+id/RelativeLayout_note" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_buttons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/income_cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rdmoneyleftbtn_effect"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/White"
                    android:text="@string/Cancel" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/income_ok_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rdmoneyrightbtn_effect"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/White"
                    android:text="@string/OK" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>